# crail

./: CMakeLists.txt  README.md
examples/: calculus_demo.cpp  matrix_demo.cpp  tensor_demo.cpp
include/core/: calculus.hpp  linalg.hpp  matrix.hpp
include/objects/: matrix.hpp  tensor.hpp
src/core/: calculus.cpp  linalg.cpp
src/objects/: linearregression.cpp  matrix.cpp  tensor.cpp
tests/: test_calculus.cpp  test_linalg.cpp  test_tensor.cpp
